--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 										<article>
 											<a href="https://github.com/tedglim" class="image"><img src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<p>Additional projects that I've worked on or are currently in-progress.</p>
+												<p>Additional personal projects to peruse.</p>
 											</div>
 										</article>
 									</div>
