--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
 									<h3>Game Prototypes</h3>
 									<div class="features">
 										<article>
+											<h4>Break the Target</h4>
+											<a href="https://simmer.io/@demastte/break-the-target" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
+											<br clear="all" />
+											<br clear="all" />
+											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/break-the-target">Click here to play!</a></p>
+										</article>
+										<article>
 											<h4>All-Clear</h4>
 											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
 											<br clear="all" />
