1st edit: Revise site
Change order of sections; change section content. Make interactive and viewable.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#About Me" class="active">About Me</a></li>
-						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
+						<li><a href="#Games">Independent Game Projects</a></li>
+						<li><a href="#Spreadsheets">System Spreadsheets</a></li>
 						<li><a href="#Breakdowns">Game Analyses</a></li>						
-						<li><a href="#Prototypes">Game Prototypes</a></li>
 						<li><a href="#Projects">More Projects</a></li>
 					</ul>
 				</nav>
@@ -49,30 +49,73 @@
 										<h2>Ted Lim</h2>
 										<p>Game Designer</p>
 									</header>
-									<p>My goal is to create memorable experiences for people to enjoy and share with others through games. </p>
+									{% comment %} <p>My goal is to create memorable experiences for people to enjoy and share with others through games.</p> {% endcomment %}
 								</div>
 							</section>
-
+						<!-- Games -->
+							<section id="Games">
+								<div class="container">
+									<h3>Independent Game Projects</h3>
+									<div class="features">
+										<article>
+											<h4>All-Clear</h4>
+											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
+											<br clear="all" />
+											<br clear="all" />
+											<p>A strategic Match3 puzzle game. Skillfully match orbs to clear challenging levels before you run out of moves. <a href="https://simmer.io/@demastte/all-clear">Click here to play!</a></p>
+										</article>
+										<article>
+											<h4>Break the Target</h4>
+											<a href="https://simmer.io/@demastte/break-the-target" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
+											<br clear="all" />
+											<br clear="all" />
+											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/break-the-target">Click here to play!</a></p>
+										</article>
+										<article>
+											<h4>Shoot and Clear</h4>
+											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
+											<br clear="all" />
+											<br clear="all" />
+											<p>A 2D action-survival platformer. Earn points by collecting gems from your defeated enemies. <a href="https://simmer.io/@demastte/clear-and-shoot">Click here to play!</a></p>
+										</article>
+										<article>
+											<h4>Graybox Rush</h4>
+											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a>
+											<br clear="all" />
+											<br clear="all" />
+											<p>A 2D endless runner. Collect coins to earn points and aim for a high score. <a href="https://simmer.io/@demastte/graybox-rush">Click here to play!</a></p>
+										</article>
+									</div>
+								</div>
+							</section>
 						<!-- Spreadsheets -->
 							<section id="Spreadsheets">
 								<div class="container">
-									<h3>Game Spreadsheets</h3>
+									<h3>System Spreadsheets</h3>
 									<div class="features">
+										<article>
+											<a href="https://docs.google.com/spreadsheets/d/1tW_Ll6Q40PVxFBPK_M_Nx3EfMAIeyVwHv-8euNggV9A/edit?usp=sharing" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
+											<div class="inner">
+												<h4>Crafting/Loot Crate System</h4>
+												<p>Estimates how long it takes to gather enough resources to craft an item via opening loot boxes. You can try it out <a href="https://docs.google.com/spreadsheets/d/1tW_Ll6Q40PVxFBPK_M_Nx3EfMAIeyVwHv-8euNggV9A/edit?usp=sharing">here</a>.</p>
+											</div>
+										</article>
 										<article>
 											<a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
 											<div class="inner">
 												<h4>Character Stats Calculator</h4>
-												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can use it <a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing">here</a>.</p>
-											</div>
-										</article>										
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/crafting_simulator" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
-											<div class="inner">
-												<h4>Crafting Simulator</h4>
-												<p>Estimates how long it takes to gather enough resources to craft an item via opening loot boxes.</p>
+												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can try it out <a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
 										<article>
+											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
+											<div class="inner">
+												<h4>TCG Deck Optimizer</h4>
+												<p>Calculates the % chance to get a certain card combination in the opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
+											</div>
+										</article>					
+
+										{% comment %} <article>
 											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/monetization" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
 											<div class="inner">
 												<h4>Monetization</h4>
@@ -85,7 +128,7 @@
 												<h4>Progression</h4>
 												<p>Showcases an adjustable level progression curve for a mock strategy game with the accompanying rewards per level.</p>
 											</div>
-										</article>
+										</article> {% endcomment %}
 									</div>
 								</div>
 							</section>
@@ -102,12 +145,19 @@
 											</div>
 										</article>
 										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/monetization" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
+											<div class="inner">
+												<h4>Monetization</h4>
+												<p>A cursory breakdown and analysis of Cookie Jam Blast's pricing of in-app purchases.</p>
+											</div>
+										</article>
+										{% comment %} <article>
 											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
 											<div class="inner">
 												<h4>Cookie Jam Blast Teardown</h4>
 												<p>Learnings from a Match 3 game</p>
 											</div>
-										</article>
+										</article> {% endcomment %}
 										<article>
 											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
@@ -115,52 +165,17 @@
 												<p>A deep-dive into a mobile tactics RPG game.</p>
 											</div>
 										</article>
-										<article>
+										{% comment %} <article>
 											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
 											<div class="inner">
 												<h4>Golf Clash Teardown</h4>
 												<p>Looks at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
 											</div>
-										</article>
+										</article> {% endcomment %}
 									</div>
 								</div>
 							</section>
-						<!-- Prototypes -->
-							<section id="Prototypes">
-								<div class="container">
-									<h3>Game Prototypes</h3>
-									<div class="features">
-										<article>
-											<h4>Break the Target</h4>
-											<a href="https://simmer.io/@demastte/break-the-target" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/break-the-target">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>All-Clear</h4>
-											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A 2D puzzle game inspired by Puzzle & Dragon's Match 3 mechanics. The goal is to clear as many dots as you can. <a href="https://simmer.io/@demastte/all-clear">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>Shoot and Clear</h4>
-											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A 2D action-survival platformer where your goal is to earn points by collecting gems that are dropped by defeated enemies. <a href="https://simmer.io/@demastte/clear-and-shoot">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>Graybox Rush</h4>
-											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A 2D endless runner where you collect coins to earn points and aim for a high score. <a href="https://simmer.io/@demastte/graybox-rush">Click here to play!</a></p>
-										</article>
-									</div>
-								</div>
-							</section>
+
 						<!-- More Projects -->
 							<section id="Projects">
 								<div class="container">
