--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<li><a href="#Games">Independent Game Projects</a></li>
 						<li><a href="#Spreadsheets">System Spreadsheets</a></li>
 						<li><a href="#Breakdowns">Game Analyses</a></li>						
-						<li><a href="#Projects">More Projects</a></li>
+						<li><a href="#Projects">More Content & Projects</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -49,7 +49,6 @@
 										<h2>Ted Lim</h2>
 										<p>Game Designer</p>
 									</header>
-									{% comment %} <p>My goal is to create memorable experiences for people to enjoy and share with others through games.</p> {% endcomment %}
 								</div>
 							</section>
 						<!-- Games -->
@@ -114,21 +113,6 @@
 												<p>Calculates the % chance to get a certain card combination in the opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>					
-
-										{% comment %} <article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/monetization" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
-											<div class="inner">
-												<h4>Monetization</h4>
-												<p>A cursory breakdown and analysis of Cookie Jam Blast's pricing of in-app purchases.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/progression" class="image"><img src="images/my_imgs/Progression.png" alt="" /></a>
-											<div class="inner">
-												<h4>Progression</h4>
-												<p>Showcases an adjustable level progression curve for a mock strategy game with the accompanying rewards per level.</p>
-											</div>
-										</article> {% endcomment %}
 									</div>
 								</div>
 							</section>
@@ -151,13 +135,6 @@
 												<p>A cursory breakdown and analysis of Cookie Jam Blast's pricing of in-app purchases.</p>
 											</div>
 										</article>
-										{% comment %} <article>
-											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
-											<div class="inner">
-												<h4>Cookie Jam Blast Teardown</h4>
-												<p>Learnings from a Match 3 game</p>
-											</div>
-										</article> {% endcomment %}
 										<article>
 											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
@@ -165,26 +142,18 @@
 												<p>A deep-dive into a mobile tactics RPG game.</p>
 											</div>
 										</article>
-										{% comment %} <article>
-											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
-											<div class="inner">
-												<h4>Golf Clash Teardown</h4>
-												<p>Looks at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
-											</div>
-										</article> {% endcomment %}
 									</div>
 								</div>
 							</section>
-
 						<!-- More Projects -->
 							<section id="Projects">
 								<div class="container">
-									<h3>More Projects</h3>
+									<h3>More Content & Projects</h3>
 									<div class="features">
 										<article>
 											<a href="https://github.com/tedglim" class="image"><img src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<p>Additional personal projects to peruse.</p>
+												<p>You can find more content and projects on my github <a href="https://github.com/tedglim">here</a>.</p>
 											</div>
 										</article>
 									</div>
