renamed gif, edited text
title

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#About Me" class="active">About Me</a></li>
-						<li><a href="#Games">Independent Game Projects</a></li>
+						<li><a href="#Games">Game Development</a></li>
 						<li><a href="#Spreadsheets">System Spreadsheets</a></li>
 						<li><a href="#Breakdowns">Game Analyses</a></li>						
 						<li><a href="#Projects">More Content & Projects</a></li>
@@ -49,16 +49,17 @@
 										<h2>Ted Lim</h2>
 										<p>Game Designer</p>
 									</header>
+									<p>Always trying to learn how to make things fun.</p>
 								</div>
 							</section>
 						<!-- Games -->
 							<section id="Games">
 								<div class="container">
-									<h3>Independent Game Projects</h3>
+									<h3>Game Development</h3>
 									<div class="features">
 										<article>
 											<h4>All-Clear</h4>
-											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
+											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/AllClear.gif" alt="" /></a>
 											<br clear="all" />
 											<br clear="all" />
 											<p>A strategic Match3 puzzle game. Skillfully match orbs to clear challenging levels before you run out of moves. <a href="https://simmer.io/@demastte/all-clear">Click here to play!</a></p>
