Fixed game links
title

--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
 											<p>A strategic Match3 puzzle game. Skillfully match orbs to clear challenging levels before you run out of moves. <a href="https://simmer.io/@demastte/all-clear">Click here to play!</a></p>
 										</article>
 										<article>
-											<h4>Break the Target</h4>
-											<a href="https://simmer.io/@demastte/break-the-target" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
+											<h4>Target Blaster</h4>
+											<a href="https://simmer.io/@demastte/target-blaster" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
 											<br clear="all" />
 											<br clear="all" />
-											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/break-the-target">Click here to play!</a></p>
+											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/target-blaster">Click here to play!</a></p>
 										</article>
 										<article>
 											<h4>Shoot and Clear</h4>
-											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
+											<a href="https://simmer.io/@demastte/shoot-and-clear" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
 											<br clear="all" />
 											<br clear="all" />
-											<p>A 2D action-survival platformer. Earn points by collecting gems from your defeated enemies. <a href="https://simmer.io/@demastte/clear-and-shoot">Click here to play!</a></p>
+											<p>A 2D action-survival platformer. Earn points by collecting gems from your defeated enemies. <a href="https://simmer.io/@demastte/shoot-and-clear">Click here to play!</a></p>
 										</article>
 										<article>
 											<h4>Graybox Rush</h4>
