Fix crafting link
title

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 									<h3>System Spreadsheets</h3>
 									<div class="features">
 										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1tW_Ll6Q40PVxFBPK_M_Nx3EfMAIeyVwHv-8euNggV9A/edit?usp=sharing" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
+											<a href="https://docs.google.com/spreadsheets/d/19S0P08olgXpqN2oeONCmeB6F9OpbGYA1Kj6QS29LVaQ/edit?usp=sharing" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
 											<div class="inner">
-												<h4>Crafting/Loot Crate System</h4>
-												<p>Estimates how long it takes to gather enough resources to craft an item via opening loot boxes. You can try it out <a href="https://docs.google.com/spreadsheets/d/1tW_Ll6Q40PVxFBPK_M_Nx3EfMAIeyVwHv-8euNggV9A/edit?usp=sharing">here</a>.</p>
+												<h4>Crafting & Loot Crate System</h4>
+												<p>Estimates how long it takes to gather enough resources to craft an item via opening loot boxes. You can try it out <a href="https://docs.google.com/spreadsheets/d/19S0P08olgXpqN2oeONCmeB6F9OpbGYA1Kj6QS29LVaQ/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
 										<article>
