Updated website more or less
title

--- a/index.html
+++ b/index.html
@@ -126,21 +126,28 @@
 											<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration" class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
 											<div class="inner">
 												<h4>Pokemon Data Exploration</h4>
-												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/monetization" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
-											<div class="inner">
-												<h4>Monetization</h4>
-												<p>A cursory breakdown and analysis of Cookie Jam Blast's pricing of in-app purchases.</p>
+												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon. Details <a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration">here</a>.</p>
 											</div>
 										</article>
 										<article>
 											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
 												<h4>Langrisser Mobile Teardown</h4>
-												<p>A deep-dive into a mobile tactics RPG game.</p>
+												<p>A deep-dive into a mobile tactics RPG game by ZlongGames. Details <a href="documents/Langrisser.pdf">here</a>.</p>
+											</div>
+										</article>
+										<article>
+											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
+											<div class="inner">
+												<h4>Cookie Jam Blast Teardown</h4>
+												<p>An analysis of the sequel to Jam City's popular mobile title Cookie Jam. Details <a href="documents/Cookie_Jam_Blast.pdf">here</a>.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://docs.google.com/spreadsheets/d/1mGzdy59gYkxIFR_tLxlUlI7F0-GkZkX3dgKUYBSAczE/edit?usp=sharing" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
+											<div class="inner">
+												<h4>Cookie Jam Blast Monetization</h4>
+												<p>A cursory breakdown and analysis of Cookie Jam Blast's in-app purchases. Details <a href="https://docs.google.com/spreadsheets/d/1mGzdy59gYkxIFR_tLxlUlI7F0-GkZkX3dgKUYBSAczE/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
 									</div>
