--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 										<article>
 											<a href="https://github.com/tedglim" class="image"><img src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<p>You can find more content and projects on my github <a href="https://github.com/tedglim">here</a>.</p>
+												<p>You can find more content and projects on my Github <a href="https://github.com/tedglim">here</a>.</p>
 											</div>
 										</article>
 									</div>
