update link to all clear
title

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 									<div class="features">
 										<article>
 											<h4>All-Clear</h4>
-											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/AllClear.gif" alt="" /></a>
+											<a href="https://demastte.itch.io/all-clear" class="image"><img src="gifs/AllClear.gif" alt="" /></a>
 											<br clear="all" />
 											<br clear="all" />
-											<p>A strategic Match3 puzzle game. Skillfully match orbs to clear challenging levels before you run out of moves. <a href="https://simmer.io/@demastte/all-clear">Click here to play!</a></p>
+											<p>A strategic Match3 puzzle game. Skillfully match orbs to clear challenging levels before you run out of moves. <a href="https://demastte.itch.io/all-clear">Click here to play!</a></p>
 										</article>
 										<article>
 											<h4>Target Blaster</h4>
