up google drive links
title

--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
+											<a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
 											<div class="inner">
 												<h4>Character Stats Calculator</h4>
-												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can try it out <a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing">here</a>.</p>
+												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can try it out <a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
 											<div class="inner">
-												<h4>TCG Deck Optimizer</h4>
-												<p>Calculates the % chance to get a certain card combination in the opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
+												<h4>TCG/CCG Deck Optimizer</h4>
+												<p>Calculates the % chance to get certain card combinations in an opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>					
 									</div>
