added more project links
title

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Me -->
 							<section id="About Me">
 								<div class="image main" data-position="center">
@@ -67,6 +65,13 @@
 										<article>
 											<h4>Target Blaster</h4>
 											<a href="https://simmer.io/@demastte/target-blaster" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
+											<br clear="all" />
+											<br clear="all" />
+											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/target-blaster">Click here to play!</a></p>
+										</article>
+										<article>
+											<h4>Pickin' Up Cash</h4>
+											<a href="https://simmer.io/@demastte/pickin-up-cash" class="image"><img src="gifs/CashDemo.gif" alt="" /></a>
 											<br clear="all" />
 											<br clear="all" />
 											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/target-blaster">Click here to play!</a></p>
@@ -101,19 +106,19 @@
 											</div>
 										</article>
 										<article>
+											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
+											<div class="inner">
+												<h4>TCG/CCG Deck Optimizer</h4>
+												<p>Calculates the % chance to get certain card combinations in an opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
+											</div>
+										</article>	
+										<article>
 											<a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
 											<div class="inner">
 												<h4>Character Stats Calculator</h4>
 												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can try it out <a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
-										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
-											<div class="inner">
-												<h4>TCG/CCG Deck Optimizer</h4>
-												<p>Calculates the % chance to get certain card combinations in an opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
-											</div>
-										</article>					
 									</div>
 								</div>
 							</section>
@@ -122,13 +127,6 @@
 								<div class="container">
 									<h3>Game Analyses</h3>
 									<div class="features">
-										<article>
-											<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration" class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
-											<div class="inner">
-												<h4>Pokemon Data Exploration</h4>
-												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon. Details <a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration">here</a>.</p>
-											</div>
-										</article>
 										<article>
 											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
@@ -148,6 +146,13 @@
 											<div class="inner">
 												<h4>Cookie Jam Blast Monetization</h4>
 												<p>A cursory breakdown and analysis of Cookie Jam Blast's in-app purchases. Details <a href="https://docs.google.com/spreadsheets/d/1mGzdy59gYkxIFR_tLxlUlI7F0-GkZkX3dgKUYBSAczE/edit?usp=sharing">here</a>.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration" class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
+											<div class="inner">
+												<h4>Pokemon Data Exploration</h4>
+												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon. Details <a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration">here</a>.</p>
 											</div>
 										</article>
 									</div>
