--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 											<a href="https://simmer.io/@demastte/pickin-up-cash" class="image"><img src="gifs/CashDemo.gif" alt="" /></a>
 											<br clear="all" />
 											<br clear="all" />
-											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/target-blaster">Click here to play!</a></p>
+											<p>A money themed browser game submitted for the <a href="https://simmer.io/c/simmerjam2">SimmerJam2</a> weekend long game jam. <a href="https://simmer.io/@demastte/pickin-up-cash">Click here to play!</a></p>
 										</article>
 										<article>
 											<h4>Shoot and Clear</h4>
