--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
+											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/deck_optimizer.png" alt="" /></a>
 											<div class="inner">
 												<h4>TCG/CCG Deck Optimizer</h4>
-												<p>Calculates the % chance to get certain card combinations in an opening hand based on card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
+												<p>Calculates the % chance to get certain card combinations in an opening hand based on a deck's card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>	
 										<article>
