--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
 									<h3>Game Analyses</h3>
 									<div class="features">
 										<article>
+											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
+											<div class="inner">
+												<h4>Golf Clash Teardown</h4>
+												<p>A deconstruction of Playdemic's realtime mobile golf game. Details <a href="documents/Golf_Clash.pdf">here</a>.</p>
+											</div>
+										</article>
+										<article>
 											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
 												<h4>Langrisser Mobile Teardown</h4>
@@ -139,13 +146,6 @@
 											<div class="inner">
 												<h4>Cookie Jam Blast Teardown</h4>
 												<p>An analysis of the sequel to Jam City's popular mobile title Cookie Jam. Details <a href="documents/Cookie_Jam_Blast.pdf">here</a>.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1mGzdy59gYkxIFR_tLxlUlI7F0-GkZkX3dgKUYBSAczE/edit?usp=sharing" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
-											<div class="inner">
-												<h4>Cookie Jam Blast Monetization</h4>
-												<p>A cursory breakdown and analysis of Cookie Jam Blast's in-app purchases. Details <a href="https://docs.google.com/spreadsheets/d/1mGzdy59gYkxIFR_tLxlUlI7F0-GkZkX3dgKUYBSAczE/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
 										<article>
