--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<header>
 					<span class="image avatar"><img src="images/my_imgs/Profile.png" alt="" /></span>
 					<h1 id="logo">Ted Lim</h1>
-					<p> Where I tell people what I've been up to.</p>
+					<p> Where I show people what I've been up to.</p>
 				</header>
 				<nav id="nav">
 					<ul>
